[package]
name = "serch"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["cli", "find", "search"]
repository = "https://github.com/ManiGhazaee/serch"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
description = "A cli tool that recursively searches all paths within the current directory or a specified directory for a given string"
readme = "README.md"


[dependencies]
termcolor = "1.4.1"
jwalk = "0.8.1"
